--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,8 +1,32 @@
-<nav>
-  <a routerLink="/home">Home</a>
-  <a routerLink="/bear">Bear</a>
-  <a routerLink="/vikings">Vikings</a>
-  <a routerLink="/swordland">Swordland</a>
-</nav>
+<div class="app-container">
+  <div class="toolbar">
+    <button class="hamburger-menu" (click)="toggleSideNav()">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+      >
+        <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z" />
+      </svg>
+    </button>
+    <h1 class="title">{{ title() }}</h1>
+  </div>
 
-<router-outlet />
+  @if (isSideNavOpen()) {
+  <div class="sidenav-overlay" (click)="toggleSideNav()"></div>
+  }
+
+  <div class="sidenav" [class.open]="isSideNavOpen()">
+    <nav>
+      <a routerLink="/home" (click)="toggleSideNav()">Home</a>
+      <a routerLink="/bear" (click)="toggleSideNav()">Bear</a>
+      <a routerLink="/vikings" (click)="toggleSideNav()">Vikings</a>
+      <a routerLink="/swordland" (click)="toggleSideNav()">Swordland</a>
+    </nav>
+  </div>
+
+  <main class="content">
+    <router-outlet />
+  </main>
+</div>
