--- a/src/app/app.html
+++ b/src/app/app.html
@@ -23,6 +23,7 @@
       <a routerLink="/bear" (click)="toggleSideNav()">Bear</a>
       <a routerLink="/vikings" (click)="toggleSideNav()">Vikings</a>
       <a routerLink="/swordland" (click)="toggleSideNav()">Swordland</a>
+      <a routerLink="/bear-simulator" (click)="toggleSideNav()">Bear Simulator</a>
     </nav>
   </div>
 
