Add my-research component

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -24,6 +24,7 @@
       <a routerLink="/vikings" (click)="toggleSideNav()">Vikings</a>
       <a routerLink="/swordland" (click)="toggleSideNav()">Swordland</a>
       <a routerLink="/bear-simulator" (click)="toggleSideNav()">Bear Simulator</a>
+      <a routerLink="/my-research" (click)="toggleSideNav()">My Research</a>
     </nav>
   </div>
 
