Add authentication and user management to the app.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,6 +11,7 @@
       </svg>
     </button>
     <h1 class="title">{{ title() }}</h1>
+    <app-user-profile />
   </div>
 
   @if (isSideNavOpen()) {
