--- a/src/app/app.html
+++ b/src/app/app.html
@@ -26,6 +26,7 @@
       <a routerLink="/swordland" (click)="toggleSideNav()">Swordland</a>
       <a routerLink="/bear-simulator" (click)="toggleSideNav()">Bear Simulator</a>
       <a routerLink="/my-research" (click)="toggleSideNav()">My Research</a>
+      <a routerLink="/hero-gear" (click)="toggleSideNav()">Hero Gear</a>
     </nav>
   </div>
 
