--- a/src/app/hero-gear/hero-gear.html
+++ b/src/app/hero-gear/hero-gear.html
@@ -39,8 +39,8 @@
   }
 
   <div class="advanced-section">
-    <button class.bind="advanced-toggle" (click)="toggleAdvanced()">
-      <span class="button-text">
+    <button class="advanced-toggle" (click)="toggleAdvanced()">
+      <span class_="button-text">
         Advanced Settings
         <span class="toggle-icon">{{ isAdvancedCollapsed() ? '&#9660;' : '&#9650;' }}</span>
       </span>
