Small renames and cleanups.

--- a/src/app/bear/bear.html
+++ b/src/app/bear/bear.html
@@ -47,7 +47,7 @@
           </div>
           <div class="form-group">
             <label for="max-troops-{{i}}">Max Troops</label>
-            <input id="max-troops-{{i}}" type="number" [value]="march.max_troops" (input)="updateMarch(i, 'max_troops', $event.target.value)">
+            <input id="max-troops-{{i}}" type="number" [value]="march.maxTroops" (input)="updateMarch(i, 'maxTroops', $event.target.value)">
           </div>
           <div class="form-group">
             <label for="parallel-{{i}}">Parallel</label>
