--- a/src/app/app.html
+++ b/src/app/app.html
@@ -21,7 +21,9 @@
   <div class="sidenav" [class.open]="isSideNavOpen()">
     <nav>
       <a routerLink="/home" (click)="toggleSideNav()">Home</a>
+      <div class="category-title">Events</div>
       <a routerLink="/bear" (click)="toggleSideNav()">Bear</a>
+      <div class="category-title">Tools</div>
       <a routerLink="/hero-gear" (click)="toggleSideNav()">Hero Gear</a>
     </nav>
   </div>
