Move things around

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -22,9 +22,15 @@
     <nav>
       <a routerLink="/home" (click)="toggleSideNav()">Home</a>
       <div class="category-title">Events</div>
-      <a routerLink="/bear" (click)="toggleSideNav()">Bear</a>
+      <a routerLink="/events/bear" (click)="toggleSideNav()">Bear</a>
       <div class="category-title">Tools</div>
+      <a routerLink="/tools/bear-formation-optimizer" (click)="toggleSideNav()">Bear Formation Optimizer</a>
       <a routerLink="/hero-gear" (click)="toggleSideNav()">Hero Gear</a>
+      <div class="category-title">Other</div>
+      <a routerLink="/vikings" (click)="toggleSideNav()">Vikings</a>
+      <a routerLink="/swordland" (click)="toggleSideNav()">Swordland</a>
+      <a routerLink="/bear-simulator" (click)="toggleSideNav()">Bear Simulator</a>
+      <a routerLink="/my-research" (click)="toggleSideNav()">My Research</a>
     </nav>
   </div>
 
