Fixes in routes and navigation

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -24,7 +24,7 @@
       <div class="category-title">Events</div>
       <a routerLink="/events/bear" (click)="toggleSideNav()">Bear</a>
       <div class="category-title">Tools</div>
-      <a routerLink="/tools/bear-formation-optimizer" (click)="toggleSideNav()">Bear Formation Optimizer</a>
+      <a routerLink="/tools/bear-optimizer" (click)="toggleSideNav()">Bear Optimizer</a>
       <a routerLink="/hero-gear" (click)="toggleSideNav()">Hero Gear</a>
     </nav>
   </div>
